@@ -1,4 +1,4 @@
-class ActiveService < ActiveRecord::Base
+class ActiveService < ApplicationRecord
   belongs_to :service
   belongs_to :server
 
