@@ -1,9 +1,9 @@
-class DeployKey < ActiveRecord::Base
+class DeployKey < ApplicationRecord
   belongs_to :server
 
   validates :name, :key, presence: true
 
   def name=(value)
-    self[:name] = value.parameterize unless value.nil?
+    self[:name] = value.parameterize if value
   end
 end
