@@ -1,4 +1,4 @@
-class Domain < ActiveRecord::Base
+class Domain < ApplicationRecord
   belongs_to :app
 
   validates :name, presence: true, uniqueness: { scope: :app_id }
