@@ -1,4 +1,4 @@
-class EnvVar < ActiveRecord::Base
+class EnvVar < ApplicationRecord
   belongs_to :app
 
   validates :key, presence: true, uniqueness: { scope: :app_id }
